--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     viewBinding {
         enabled = true
@@ -18,7 +18,7 @@ android {
     defaultConfig {
         applicationId "by.ealipatov.kotlin.materialyoufromealipatov"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -53,21 +53,21 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10'
 
     //Lifecycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     //Gson
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.9.1'
 
     // coil
-    implementation 'io.coil-kt:coil:2.1.0'
-    implementation("io.coil-kt:coil-gif:2.1.0")
-    implementation("io.coil-kt:coil-svg:2.1.0")
+    implementation 'io.coil-kt:coil:2.2.1'
+    implementation('io.coil-kt:coil-gif:2.2.1')
+    implementation('io.coil-kt:coil-svg:2.2.1')
 
     //default core
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
