--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'by.ealipatov.kotlin.materialyoufromealipatov'
 }
 
 dependencies {
